# duckduckgo-tool

./: .orchestria.yml  README.md  orchestrai_tool.json  orchestria_tool.json  pyproject.toml  search.py
duckduckgo/: search.py
