[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duckduckgo-tool"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = "~=3.12"
license = "MIT"
keywords = []
authors = [{ name = "Silvano Cerza", email = "silvanocerza@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["duckduckgo-search"]

[project.urls]
Documentation = "https://github.com/silvanocerza/duckduckgo-tool#readme"
Issues = "https://github.com/silvanocerza/duckduckgo-tool/issues"
Source = "https://github.com/silvanocerza/duckduckgo-tool"

[tool.hatch.version]
path = "duckduckgo/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:duckduckgo tests}"

[tool.coverage.run]
source_pkgs = ["duckduckgo", "tests"]
branch = true
parallel = true
omit = ["duckduckgo/__about__.py"]

[tool.coverage.paths]
duckduckgo = ["duckduckgo", "*/duckduckgo/duckduckgo"]
tests = ["tests", "*/duckduckgo/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
